--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
     "express-handlebars": "^5.1.0",
-    "knex": "^0.21.6"
+    "knex": "^0.21.6",
+    "pg": "^8.4.1"
   }
 }
