--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-handlebars": "^5.1.0",
     "handlebars": "^4.7.6",
     "knex": "^0.21.6",
+    "morgan": "^1.10.0",
     "pg": "^8.4.1"
   },
   "devDependencies": {
