--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
-  "name": "firstshittydraft",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "compression": "^1.7.4",
-    "cookie-parser": "^1.4.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-basic-auth": "^1.2.0",
-    "express-flash": "0.0.2",
-    "express-handlebars": "^5.1.0",
-    "express-session": "^1.17.1",
-    "handlebars": "^4.7.6",
-    "knex": "^0.21.6",
-    "morgan": "^1.10.0",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "pg": "^8.4.1",
-    "supertest": "^6.0.0"
-  },
-  "devDependencies": {
-    "prettier": "2.1.2"
-  }
+    "name": "Do You Remember",
+    "version": "1.0.0",
+    "description": "An application to foster better conversations",
+    "main": "app.js",
+    "scripts": {
+        "start": "node app.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "compression": "^1.7.4",
+        "connect-ensure-login": "^0.1.1",
+        "cookie-parser": "^1.4.5",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "express-basic-auth": "^1.2.0",
+        "express-flash": "0.0.2",
+        "express-handlebars": "^5.1.0",
+        "express-session": "^1.17.1",
+        "handlebars": "^4.7.6",
+        "knex": "^0.21.6",
+        "morgan": "^1.10.0",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0",
+        "passport-spotify": "^1.1.0",
+        "pg": "^8.4.1",
+        "supertest": "^6.0.0"
+    },
+    "devDependencies": {
+        "prettier": "2.1.2"
+    }
 }
