--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "compression": "^1.7.4",
         "connect-ensure-login": "^0.1.1",
         "cookie-parser": "^1.4.5",
+        "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-basic-auth": "^1.2.0",
@@ -28,6 +29,8 @@
         "passport-local": "^1.0.0",
         "passport-spotify": "^1.1.0",
         "pg": "^8.4.1",
+        "querystring": "^0.2.0",
+        "request": "^2.88.2",
         "supertest": "^6.0.0"
     },
     "devDependencies": {
