--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "do you remember",
+    "name": "hyggechats",
     "version": "1.0.0",
     "description": "An application to foster better conversations",
     "main": "app.js",
