added node modules

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_DATABASE=doyouremember
 DB_USERNAME=postgres
-DB_PASSWORD=orange
+DB_PASSWORD=postgres
 
 SPOTIFY_CLIENT_ID=4e312adb383c470c9bf03c8e304e5656
 SPOTIFY_CLIENT_SECRET=a511a73e538e48a7b0020246d34822ce
